Life without builders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,5 @@ project(design_patterns)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(open_close principles/open_close.cpp)
-add_executable(interface_segregation principles/interface_segregation.cpp)
-add_executable(dependency_inversion principles/dependency_inversion.cpp)
+add_subdirectory(principles)
+add_subdirectory(construction_patterns)
